<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/navigation_title_navigation">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_map"
                    android:title="@string/menu_map_title" />
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/menu_settings_title" />
            </group>
        </menu>
    </item>

    <item android:title="@string/navigation_title_feedback">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_rate_app"
                    android:title="@string/menu_rate_app_title" />
                <item
                    android:id="@+id/nav_write_to_author"
                    android:title="@string/menu_write_to_author" />
            </group>
        </menu>
    </item>
</menu>