<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tutorial_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_buttons_feature_tutorial_1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <GridLayout
        android:id="@+id/tutorial_buttons_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:columnCount="2"
        android:rowCount="4"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/volume_feature_tutorial_2_times_up_perfect"
            android:textColor="@color/black"
            />

        <include
            layout="@layout/rating_button_perfect"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/volume_feature_tutorial_1_time_up_good"
            android:textColor="@color/black"
            />

        <include
            layout="@layout/rating_button_good"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/volume_feature_tutorial_1_time_down_normal"
            android:textColor="@color/black"
            />

        <include
            layout="@layout/rating_button_normal"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/volume_feature_tutorial_2_times_down_bad"
            android:textColor="@color/black"
            />

        <include
            layout="@layout/rating_button_badly"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_margin="4dp"
            />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_buttons_feature_tutorial_2"
        android:textColor="@color/black"
        />
</LinearLayout>