<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_desc_empty_paths_list_error_image"
        android:src="@drawable/ic_no_paths_found"
        app:tint="#ACACAC"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:maxWidth="300dp"
        android:text="@string/empty_paths_list_title"
        android:textColor="@color/black"
        android:textSize="19sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:maxWidth="300dp"
        android:text="@string/empty_paths_list_description"
        android:textColor="#737373"
        android:textSize="16sp"/>
</LinearLayout>