<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="4dp"
    app:cardCornerRadius="12dp">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_view_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@color/white"
            android:minWidth="260dp"
            android:minHeight="100dp">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/volume_buttons_feature_request_title"/>

            <TextView
                android:id="@+id/dialog_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_title"
                tools:text="@string/volume_buttons_feature_request_desc"/>

            <LinearLayout
                android:id="@+id/how_it_works_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_description"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/how_it_works_button_title"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/dropdown_list_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_dropdown_list_button"
                    android:src="@drawable/ic_drop_down_arrow"/>
            </LinearLayout>

            <include
                android:id="@+id/how_it_works_layout"
                layout="@layout/volume_buttons_feature_tutorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/how_it_works_button"
                tools:visibility="visible"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/cancel_button_background"
                android:backgroundTint="@color/cancel_button_color"
                android:text="@string/no_dialog_button"
                android:textAllCaps="false"
                android:textColor="@color/cancel_button_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/yes_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/how_it_works_layout"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/cancel_button_background"
                android:backgroundTint="@color/yes_button_color"
                android:text="@string/yes_dialog_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/no_button"
                app:layout_constraintTop_toBottomOf="@id/how_it_works_layout"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>